import grpc
from concurrent import futures
import proto
import your_proto_file_pb2_grpc


class ModelService(your_proto_file_pb2_grpc.ModelServiceServicer):
    def TrainModel(self, request, context):
        # Implement your model training logic here
        model_name = request.model_name
        hyperparameters = request.hyperparameters
        training_data = request.training_data

        # Do the model training and return a response
        response = your_proto_file_pb2.ModelInfo(
            model_name=model_name,
            hyperparameters=hyperparameters
        )
        return response


def serve():
    server = grpc.server(futures.ThreadPoolExecutor(max_workers=10))
    your_proto_file_pb2_grpc.add_ModelServiceServicer_to_server(ModelService(), server)
    server.add_insecure_port('[::]:50051')  # Specify the gRPC server port
    server.start()
    server.wait_for_termination()


if __name__ == '__main__':
    serve()
